# reservation_bot

./: Dockerfile  README.md  alembic.ini  pyproject.toml
ReservationBot/: bot.py  config.py  generate_token.py  main.py
ReservationBot/db/: controller.py  db.py
ReservationBot/db/models/: reservation.py  room.py  state.py  token.py  user.py
ReservationBot/models/db/: controller.py  models.py
ReservationBot/schemas/: RoomsResponse.py  permission_types.py  room_types.py
migration/: env.py
migration/versions/: 174f919a0ab1_add_reservation_owner.py  4372ccedfe6f_initial.py  52261e95d34b_add_table_states.py  65c9f0666ccf_personal_token.py  990c1cd93016_initial.py  a93e62bb1ac2_add_token.py  fb7ebccdb60c_bigint.py
