[tool.poetry]
name = "TokenBot"
version = "0.1.0"
description = ""
authors = ["Daniil Zakharchenko <zakharchenko.dv@dns-shop.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
telebot = "0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.2.1"
aiohttp = "^3.9.3"
asyncpg = "^0.29.0"
yopass-api = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
